これはMKV10のそーすを改造したものです。
判明バグ?;
コードを保存すると比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
こーどが勝手に増殖することがある
ごく一部の浮動小数が表示されない 0x

this is modded mkultrav10.
KnownProblem;
doesnot work fine unknown value search after code save
if code is reloaded & saved many times,save&reload function doesnot work..
dupricated code agaist your will
これはMKV10のそーすを改造したものです。
判明バグ?;
一部のゲームでキーボードをだすとフリーズする(武装神姫)
コードを保存すると比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
こーどが勝手に増殖することがある
ごく一部の浮動小数が表示されない 0x

this is modded mkultrav10.
KnownProblem;
unknown freeze bug using keyboad for certail game(busosinki and so on..)
doesnot work fine unknown value search after code save
if code is reloaded & saved many times,save&reload function doesnot work..
dupricated code agaist your will

2010/11/18
HOMEKEY押したときはメニュー外に移動に変更
PSPLINK互換のためUSBを外した(PSIDは復活)
added newmakefile(remove USB) because PSPLINK compatibility

2010/11/16
パッドデータがプラグイン表示以外でてなかったのを修正
ログビューア－が５つ分保存されてなかったので修正
設定ファイルをms0:seplugins/nitePR/colorからms0:seplugins/nitePR/MKIJROに変更
fixed joker output,back to decoder
change settingfile path,ms0:seplugins/nitePR/color -> ms0:seplugins/nitePR/MKIJRO

2010/11/15
カラーファイルでボタン設定をできるようにした
JOKER吐き出しアドレスをASMぱっちなしに変更
NOTEボタンでのコード選択→チートにコピーを復活させた(DECODERでコピーメニュー□ボタン)
スクリーンショットON/OFF機能を追加(要コンパイル)
make -f Makefile_screenshot

add menukey/screeshotkey/codetoggle key by color setteing
no more need ASM H4CK,JOKER OUTPUT
DEC>TXT,DEC>CHEAT again,copier -> SQUARE,selet range by NOTE botton then use
added screeshot toggles(need compile)
make -f Makefile_screenshot

2010/11/14
UFLOAT 2バイトかつ&2,MFLOAT lui+addi/addiu/ori でレジスタが全部同じとき 
UPPERFLOAT(VALUE<<16),MERGEDFLOAT LUI+ADDI/ADDIU/ORI && ALL REGISTER SAME
unknown vfpu opcode 0xD039****

2010/11/13
コードえでぃたで奇数アドレスの時はニーモニック非表示,2バイトかつ&2の時は16BITシフトするようにした
vfim.sとluiの半浮動小数表示対応
ジャンプログ機能を追加した,△メニューで呼び出し可能,□を押すとクリア
no display when 1BYTMODE,2BYTE MODE shift 16bit in cheat edit menu.
support 16bit float for lui half_float(IEEE754),vfim.s vhalf_float(NOT IEE754,SONY SPECIAL?)